# identify

./: README.md  commitlint.config.mjs  flake.nix
.github/workflows/: rust.yaml  typos.yaml
backend/: .gitignore  Cargo.toml  deny.toml
backend/identify/: Cargo.toml
backend/identify-application/: Cargo.toml
backend/identify-application/src/: lib.rs
backend/identify-application/src/contracts/: user.rs
backend/identify-application/src/use_cases/: mod.rs
backend/identify-application/src/use_cases/user/: mod.rs
backend/identify-application/src/use_cases/user/create_user/: mod.rs
backend/identify-core/: Cargo.toml
backend/identify-core/src/: lib.rs
backend/identify-core/src/models/user/: id.rs  mod.rs
backend/identify-domain/: Cargo.toml
backend/identify-domain/src/: entities.rs  lib.rs
backend/identify-domain/src/entities/user/: id.rs  mod.rs
backend/identify-infrastructure/: Cargo.toml
backend/identify-infrastructure/.sqlx/: query-26b6268cebf22a2a9b195fddb094c99b2137e0f1dfeec2886ecd5a9d58239ed0.json  query-bea295e0f7a3d0bc6ecb33af448e0382935392605f8f84c2d8ecfcf0f0b9232b.json
backend/identify-infrastructure/migrations/: 20260122161555_add_users_table.up.sql
backend/identify-infrastructure/src/: lib.rs
backend/identify-infrastructure/src/storage/: connection.rs  mod.rs
backend/identify-infrastructure/src/storage/users/: mod.rs  row.rs
backend/identify-macros/: Cargo.toml
backend/identify-macros/src/: id.rs  lib.rs  model.rs
backend/identify/src/: logging.rs  main.rs
backend/identify/src/api/: mod.rs
backend/identify/src/api/services/user/: mod.rs  state.rs
backend/src/: lib.rs  logging.rs  main.rs
