[workspace]
resolver = "3"
members = [
  "identify",
  "identify-domain",
  "identify-macros",
  "identify-application",
  "identify-infrastructure",
]
default-members = ["identify"]

[workspace.dependencies]
identify-domain = { path = "./identify-domain", version = "0.1.0" }
identify-macros = { path = "./identify-macros", version = "0.1.0" }
identify-application = { path = "./identify-application", version = "0.1.0" }
identify-infrastructure = { path = "./identify-infrastructure", version = "0.1.0" }
axum = { version = "0.8.8" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
eyre = "0.6.12"
thiserror = "2.0.17"
uuid = { version = "1.19.0", features = ["v5"] }
chrono = "0.4.42"
async-trait = "0.1.89"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "sqlite",
  "macros",
  "chrono",
  "uuid",
] }

[profile.release]
lto = "fat"

[workspace.lints.rust]
unsafe_code = "forbid"
