[package]
name = "identify-domain"
description = "This crate contains domain-level logic for Identify"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
identify-macros = { workspace = true }

[lints]
workspace = true
