[package]
name = "identify"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
eyre = { workspace = true }
sqlx = { workspace = true }
identify-macros = { workspace = true }
identify-infrastructure = { workspace = true }

[lints]
workspace = true
